--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "@modular-forms/solid": "^0.21.0",
     "@solidjs/router": "^0.13.6",
+    "@suid/icons-material": "^0.7.0",
+    "@suid/material": "^0.16.0",
+    "@suid/vite-plugin": "^0.2.0",
     "solid-js": "^1.8.11"
   }
 }
