--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "vite-template-solid",
+  "name": "bun-solid",
+  "private": true,
   "version": "0.0.0",
-  "description": "",
+  "type": "module",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "dev": "bunx --bun vite",
+    "build": "bunx --bun vite build",
+    "preview": "vite preview"
   },
-  "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.14.8",
-    "solid-devtools": "^0.29.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vite-plugin-solid": "^2.8.2"
+    "@types/node": "^22.2.0",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.0",
+    "vite-plugin-solid": "^2.10.2"
   },
   "dependencies": {
     "@modular-forms/solid": "^0.21.0",
     "@solidjs/router": "^0.13.6",
-    "solid-js": "^1.8.11"
+    "solid-js": "^1.8.19"
   }
 }
