--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwindcss": "^3.4.9",
     "typescript": "^5.5.3",
     "vite": "^5.4.0",
     "vite-plugin-solid": "^2.10.2"
@@ -17,6 +22,9 @@
   "dependencies": {
     "@modular-forms/solid": "^0.21.0",
     "@solidjs/router": "^0.13.6",
-    "solid-js": "^1.8.19"
+    "@tanstack/solid-form": "^0.28.0",
+    "@tanstack/zod-form-adapter": "^0.28.0",
+    "solid-js": "^1.8.19",
+    "zod": "^3.23.8"
   }
 }
