--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "vite-plugin-solid": "^2.10.2"
   },
   "dependencies": {
+    "@kobalte/core": "^0.13.4",
     "@modular-forms/solid": "^0.21.0",
     "@solidjs/router": "^0.13.6",
     "@tanstack/solid-form": "^0.28.0",
     "@tanstack/zod-form-adapter": "^0.28.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "solid-js": "^1.8.19",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   }
 }
